// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`organism/FormConfig organism/FormConfig-snapshot 1`] = `
<FormConfig>
  <Center>
    <Center__Container>
      <main
        className="Center__Container-sc-tnkcpe-0 lkosJD"
      >
        <Center__CenterDiv>
          <div
            className="Center__CenterDiv-sc-tnkcpe-1 frNToq"
          >
            <div>
              Title
            </div>
            <div>
              Description
            </div>
            <div>
              Form
            </div>
          </div>
        </Center__CenterDiv>
      </main>
    </Center__Container>
  </Center>
</FormConfig>
`;

exports[`organism/FormConfig organism/FormConfig-snapshot 2`] = `
<FormConfig
  isLoggedIn={true}
>
  <Center>
    <Center__Container>
      <main
        className="Center__Container-sc-tnkcpe-0 lkosJD"
      >
        <Center__CenterDiv>
          <div
            className="Center__CenterDiv-sc-tnkcpe-1 frNToq"
          >
            <div>
              Title
            </div>
            <div>
              Description
            </div>
            <div>
              Form
            </div>
          </div>
        </Center__CenterDiv>
      </main>
    </Center__Container>
  </Center>
</FormConfig>
`;

exports[`organism/FormConfig organism/FormConfig-snapshot 3`] = `
<FormConfig
  initialLogin={true}
  isLoggedIn={true}
>
  <Center>
    <Center__Container>
      <main
        className="Center__Container-sc-tnkcpe-0 lkosJD"
      >
        <Center__CenterDiv>
          <div
            className="Center__CenterDiv-sc-tnkcpe-1 frNToq"
          >
            <div>
              Title
            </div>
            <div>
              Description
            </div>
            <div>
              Form
            </div>
          </div>
        </Center__CenterDiv>
      </main>
    </Center__Container>
  </Center>
</FormConfig>
`;
